--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
         <div class="swiper-slide"><img src="img/samsung.svg" alt="" /></div>
         <div class="swiper-slide"><img src="img/lenovo.svg" alt="" /></div>
         <div class="swiper-slide"><img src="img/samsung.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/apple.svg" alt="" /></div>
+        <div class="table-swiper-slide">
+          <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
+          <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
+          <div class="swiper-slide"><img src="img/apple.svg" alt="" /></div>
+        </div>
+        <button><img src="img/expand.svg" alt="expand" />Показать все</button>
       </div>
       <div class="swiper-pagination"></div>
     </div>
