--- a/index.html
+++ b/index.html
@@ -18,18 +18,28 @@
     <div class="header">Ремонт техники различных брендов</div>
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="img/acer.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/apple.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/bosch.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/samsung.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/lenovo.svg" alt="" /></div>
-        <div class="swiper-slide"><img src="img/samsung.svg" alt="" /></div>
-        <div class="table-swiper-slide">
-          <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/sony.svg" alt="" /></div>
-          <div class="swiper-slide"><img src="img/apple.svg" alt="" /></div>
+        <div class="swiper-slide"><img src="img/acer.svg" alt="acer" /></div>
+        <div class="swiper-slide"><img src="img/apple.svg" alt="apple" /></div>
+        <div class="swiper-slide"><img src="img/bosch.svg" alt="bosch" /></div>
+        <div class="swiper-slide">
+          <img src="img/samsung.svg" alt="samsung" />
         </div>
-        <button><img src="img/expand.svg" alt="expand" />Показать все</button>
+        <div class="swiper-slide">
+          <img src="img/lenovo.svg" alt="lenovo" />
+        </div>
+        <div class="swiper-slide">
+          <img src="img/samsung.svg" alt="samsung" />
+        </div>
+        <div class="table-swiper-slide">
+          <div class="swiper-slide"><img src="img/sony.svg" alt="sony" /></div>
+          <div class="swiper-slide"><img src="img/sony.svg" alt="sony" /></div>
+          <div class="swiper-slide__apple">
+            <img src="img/apple.svg" alt="apple" />
+          </div>
+        </div>
+        <button class="hidden-button">
+          <img src="img/expand.svg" alt="expand" />Показать все
+        </button>
       </div>
       <div class="swiper-pagination"></div>
     </div>
