--- a/index.html
+++ b/index.html
@@ -30,19 +30,26 @@
         <div class="swiper-slide">
           <img src="img/samsung.svg" alt="samsung" />
         </div>
-        <div class="table-swiper-slide">
+        
           <div class="swiper-slide"><img src="img/sony.svg" alt="sony" /></div>
-          <div class="swiper-slide"><img src="img/sony.svg" alt="sony" /></div>
-          <div class="swiper-slide__apple">
-            <img src="img/apple.svg" alt="apple" />
-          </div>
+          <div class="swiper-slide"><img src="img/sony.svg" alt="sony" /></div> 
+      </div>
         </div>
-        <button class="hidden-button">
-          <img src="img/expand.svg" alt="expand" />Показать все
-        </button>
       </div>
       <div class="swiper-pagination"></div>
     </div>
+    <div class="content">
+      <div class="swiper-slide"><img src="img/acer.svg" alt="acer" /></div>
+      <div class="swiper-slide">
+          <img src="img/samsung.svg" alt="samsung" />
+          <div class="swiper-slide"><img src="img/apple.svg" alt="apple" /></div>
+        </div>
+
+    </div>
+     <div class="button">
+          <button class="hidden-button">
+          <img src="img/expand.svg" alt="expand" />Показать все
+        </button>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="file.js"></script>
   </body>
