--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="img/acer.svg" alt="acer" /><img
-            src="img/go.svg"
-            alt="go"
-            height="40px"
-          />
+          <img src="img/acer.svg" alt="acer" /><img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/apple.svg" alt="apple" /><img src="img/go.svg" alt="go"
+          <img src="img/apple.svg" alt="apple" /><img
+            src="img/go.svg"
+            alt="go"
+          />
         </div>
         <div class="swiper-slide">
           <img src="img/bosch.svg" alt="bosch" /><img
@@ -43,7 +42,7 @@
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/samsung.svg" alt="samsung" />
+          <img src="img/samsun.svg" alt="samsung" />
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
@@ -64,14 +63,8 @@
 
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-      var swiper = new Swiper('.mySwiper', {
-        pagination: {
-          el: '.swiper-pagination',
-        },
-      });
+    <script src="file.js">
+      
     </script>
   </body>
 </html>
