--- a/index.html
+++ b/index.html
@@ -20,51 +20,52 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <img src="img/acer.svg" alt="acer" /><img src="img/go.svg" alt="go" />
-        </div>
-        <div class="swiper-slide">
-          <img src="img/apple.svg" alt="apple" /><img
+          <img class="logo" src="img/acer.svg" alt="acer" /><img
             src="img/go.svg"
             alt="go"
           />
         </div>
         <div class="swiper-slide">
-          <img src="img/bosch.svg" alt="bosch" /><img
+          <img class="logo" src="img/apple.svg" alt="apple" /><img
             src="img/go.svg"
             alt="go"
           />
         </div>
         <div class="swiper-slide">
-          <img src="img/hp.svg" alt="hp" /><img src="img/go.svg" alt="go" />
-        </div>
-        <div class="swiper-slide">
-          <img src="img/lenovo.svg" alt="lenovo" />
+          <img class="logo" src="img/bosch.svg" alt="bosch" />
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/samsun.svg" alt="samsung" />
+          <img class="logo" src="img/hp.svg" alt="hp" /><img
+            src="img/go.svg"
+            alt="go"
+          />
+        </div>
+        <div class="swiper-slide">
+          <img class="logo" src="img/lenovo.svg" alt="lenovo" />
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/acer.svg" alt="acer" />
+          <img class="logo" src="img/samsun.svg" alt="samsung" />
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/apple.svg" alt="apple" />
+          <img class="logo" src="img/acer.svg" alt="acer" />
           <img src="img/go.svg" alt="go" />
         </div>
         <div class="swiper-slide">
-          <img src="img/bosch.svg" alt="bosch" />
+          <img class="logo" src="img/apple.svg" alt="apple" />
+          <img src="img/go.svg" alt="go" />
+        </div>
+        <div class="swiper-slide">
+          <img class="logo" src="img/bosch.svg" alt="bosch" />
           <img src="img/go.svg" alt="go" />
         </div>
       </div>
       <div class="swiper-pagination"></div>
     </div>
-
-    <!-- Swiper JS -->
+    <button></button>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="file.js">
-      
-    </script>
+    <script src="file.js"></script>
   </body>
 </html>
