--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div class="swiper-pagination"></div>
     </div>
-    <button></button>
+    <button class="hidden-button"><img src="img/expand.svg" alt="expand"> Показать все</button>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="file.js"></script>
   </body>
